src/styles/_mixins.scss
@use 'colors' as colors;
@use 'sizes' as sizes;

@mixin solution-button($icon, $color) {
  position: absolute;
  top: -0.35em;
  animation: slide-right-fade 0.25s forwards ease-out;

  font-family: 'Material Icons';
  font-size: sizes.$option-icon;
  content: $icon;
  color: $color;

  // Creates the white background and border
  background-color: #fff;
  border-radius: 50%;
  line-height: 1em;

  filter: drop-shadow(7px 7px 4px #00000065);

  z-index: 1;
  overflow: overlay;
}

@mixin hover-overlay() {
  // Adds the overlay effect
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: colors.$color-border-interaction;
  opacity: 0.15;
}

